--- a/markdown/伤害计算公式.md
+++ b/markdown/伤害计算公式.md
@@ -223,5 +223,357 @@
 ### 特殊乘区
 
 在以上提到的乘区之外，还有一些效果属于其他的客制化属性，这类效果与以上提到的乘区相互独立并乘算，由于笔者未在游戏中找到相应的可以用于命名此类乘区的名词，故将此类乘区归为特殊乘区，这里的典型案例是特殊减伤：
+
 - 碾骨先锋持盾状态受到的伤害降低 90%。
 - 棱镜天使连接的敌人受到的伤害降低 80%。
+
+---
+
+## 异常伤害
+
+本部分内容仅针对于物理异常、法术异常和法术爆发伤害。
+
+总公式: 异常伤害 =
+[基础伤害区](#基础伤害区) *
+[暴击区](#暴击区) *
+[伤害加成区](#伤害加成区) *
+[伤害减免区](#伤害减免区) *
+[易伤区](#易伤区) *
+[增幅区](#增幅区) *
+[虚弱区](#虚弱区) *
+[庇护区](#庇护区) *
+[脆弱区](#脆弱区) *
+[防御区](#防御区) *
+[失衡易伤区](#失衡易伤区) *
+[抗性区](#抗性区) *
+[特殊乘区](#特殊乘区) *
+[等级系数区](#等级系数区) *
+[源石技艺强度区](#源石技艺强度区)
+
+**异常等级**：等于触发物理异常或法术异常时消耗的[破防]或[法术附着]层数(最高 4 级)。异常等级越高，物理异常和法术异常的效果就越强。
+
+---
+
+### 法术异常和法术爆发
+
+#### 法术附着
+
+一些技能会对敌人施加[法术附着]，根据敌人身上已有的[法术附着]和本次施加的[法术附着]会触发对应的[法术异常]和[法术爆发]效果。
+
+#### 导电
+
+对处于其他[法术附着]状态下的敌人施加电磁附着时，会消耗所有的[法术附着]层数触发[导电]。
+
+根据异常等级，造成电磁伤害，敌人受到的法术伤害提高 12%/16%/20%/24%，[导电]状态初始持续时间为 12/18/24/30 秒。
+
+**伤害倍率 = 80% * (1 + 异常等级)**
+
+#### 腐蚀
+
+对处于其他[法术附着]状态下的敌人施加自然附着时，会消耗所有的[法术附着]层数触发[腐蚀]。
+
+根据异常等级，造成自然伤害，敌人初始降低 3.6/4.8/6/7.2 点全属性抗性，每秒降低 0.84/1.12/1.4/1.68 点全属性抗性，至多降低 12/16/20/24 点全属性抗性，[腐蚀]状态初始持续时间为 15 秒。如果刷新[腐蚀]状态，会维持之前的抗性下降。
+
+**伤害倍率 = 80% * (1 + 异常等级)**
+
+#### 燃烧
+
+对处于其他[法术附着]状态下的敌人施加灼热附着时，会消耗所有的[法术附着]层数触发[燃烧]。
+
+根据异常等级，造成灼热伤害，敌人每秒受到一次持续伤害，[燃烧]状态初始持续时间为 10 秒。
+
+**初始伤害倍率 = 80% * (1 + 异常等级)**
+
+**持续伤害倍率 = 12% * (1 + 异常等级)**
+
+#### 冻结
+
+对处于其他[法术附着]状态下的敌人施加寒冷附着时，会消耗所有的[法术附着]层数触发[冻结]。
+
+造成寒冷伤害，并使弱小的敌人无法行动，根据异常等级，[冻结]状态初始持续时间依次为 6/7/8/9 秒。
+
+**伤害倍率 = 130%**
+
+#### 碎冰
+
+对处于[冻结]状态下的敌人施加[破防]或物理异常时会触发[碎冰]，消耗敌人的[冻结]状态，并造成大量物理伤害。
+
+**伤害倍率 = 120% * (1 + 异常等级)**
+
+注意：碎冰虽然造成的是物理伤害但其属于法术异常。
+
+#### 法术爆发
+
+对处于[法术附着]状态下的敌人施加相同属性[法术附着]时，会叠加一次对应属性[法术附着](最多为 4 层)，并对敌人造成一次对应属性伤害。
+
+**任意法术爆发的伤害倍率 = 160%**
+
+注意：默认情况下，强制施加的法术异常没有初始伤害。
+
+---
+
+### 物理异常
+
+#### 破防
+
+敌人首次受到物理异常时，不会直接触发异常效果，而是进入[破防]状态。破防状态可以被[倒地]和[击飞]叠加(至多 4 层)，且会被[碎甲]和[猛击]消耗。
+
+注意：[破防]不属于物理异常。
+
+#### 倒地
+
+对已经带有[破防]的敌人释放带有倒地的技能会触发[倒地]，叠加 1 层[破防]，造成物理伤害，累积 10 点失衡值，并使弱小的敌人倒地。
+
+**伤害倍率 = 120%**
+
+#### 击飞
+
+对已经带有[破防]的敌人释放带有击飞的技能会触发[击飞]，叠加 1 层[破防]，造成物理伤害，累积 10 点失衡值，并使弱小的敌人浮空。
+
+**伤害倍率 = 120%**
+
+#### 碎甲
+
+对已经带有[破防]的敌人释放带有碎甲的技能会消耗所有[破防]层数并触发[碎甲]。
+
+根据异常等级，造成物理伤害，并使敌人受到的物理伤害提高 12%/16%/20%/24%，[碎甲]状态初始持续时间为 12/18/24/30 秒。
+
+**伤害倍率 = 50% * (1 + 异常等级)**
+
+#### 猛击
+
+对已经带有[破防]的敌人释放带有猛击的技能会消耗所有[破防]层数并触发[猛击]。
+
+根据异常等级，造成大量物理伤害。
+
+**伤害倍率 = 150% * (1 + 异常等级)**
+
+---
+
+### 等级系数区
+
+**等级系数区 = 1 + (触发者等级 - 1) / 196** （法术异常和法术爆发）
+
+**等级系数区 = 1 + (触发者等级 - 1) / 392** （物理异常）
+
+**等级系数区 = 1** （其他伤害）
+
+对于法术异常和法术爆发伤害，等级系数区由 1 级的 1 线性提升至 90 级的 1.454。
+
+对于物理异常伤害，等级系数区由 1 级的 1 线性提升至 90 级的 1.227。触发者等级对于物理异常伤害的影响相比于法术异常和法术爆发伤害减半。
+
+---
+
+### 源石技艺强度区
+
+**源石技艺强度区 = 1 + 源石技艺强度 / 100**
+
+源石技艺强度直接影响干员造成的物理异常、法术异常和法术爆发的伤害和效果，每点源石技艺强度可以使：
+
+- 干员触发猛击、燃烧、冻结、碎冰、法术爆发时，造成的伤害 +1%
+- 触发碎甲、导电、腐蚀时，造成的伤害 +1%，附带效果增强参见下文
+- 触发击飞、倒地时，造成的伤害 +1%，累积的失衡值 +0.5%
+
+**附带效果增强数值 = 2 * 源石技艺强度 / (源石技艺强度 + 300)**
+
+该结果与对应的原始效果数值乘算：
+
+**增强后效果 = 原始效果 * (1 + 附带效果增强)**
+
+装备的副词条等可以为干员提供一定数额的源石技艺强度，但需注意装备副词条的源石技艺强度加成全部带有小数点后数值，并且该数值显示向下取整。
+
+---
+
+### 其他异常相关属性
+
+此处指一些上文中未提到但会影响到异常的伤害和效果的属性。
+
+例如佩丽卡的潜能 4 长效导流的效果："连携技即时协议·闪链施加的导电使敌人受到法术伤害提高的效果提升至原本的 1.33 倍"。
+
+此类效果提升倍率与源石技艺强度的乘算：
+
+**增强后效果 = 原始效果 * (1 + 附带效果增强) * 效果提升倍率**
+
+---
+
+### 敌人造成的法术异常
+
+注意：此部分内容与干员造成的法术异常完全不同。
+
+一部分敌人的技能会为干员施加[法术附着]，对应属性的[法术附着]达到 4 层时干员会进入对应的法术异常状态：
+
+- **燃烧**：8 秒内，每秒受到基于干员最大生命值 2%的无视防御力的灼热伤害
+- **导电**：眩晕 2 秒，且 10 秒内受到的法术伤害提高 20%
+- **腐蚀**：6 秒内无法冲刺，且移动速度降低 20%
+- **冻结**：3.5 秒内无法行动
+
+---
+
+## 失衡系统
+
+---
+
+### 失衡值
+
+敌人的失衡条显示在生命条的下方，干员可以通过多种方式对其累积失衡值。
+
+通常情况下，有以下几种方式可以对敌人累积失衡值：
+
+1. 干员的重击、连携技(不包括陈千语)、战技和终结技命中敌人可以累积失衡值
+2. 干员对敌人造成[击飞]和[倒地]可以对其累积失衡值（每次 10 点）
+3. 敌人释放一些技能时会进入蓄力状态，期间身上会有警示光圈。此时使用技能对其造成伤害可以将其打断，敌人会停止行动并累积失衡值
+
+由干员对敌人累积的失衡值会受到失衡效率加成的加成：
+
+**失衡值累积 = 基础失衡值 * (1 + 失衡效率加成)**
+
+目前游戏中，仅套装[点剑]的效果可以使装备者失衡效率加成 +20%。
+
+---
+
+### 失衡状态
+
+失衡值满时，敌人进入失衡状态，持续一段时间。期间敌人无法行动，受到的伤害增加 30%（即失衡易伤区 = 1.3）。
+
+不同等阶敌人的失衡值上限：
+
+- 普通敌人：60-90
+- 进阶敌人：140-200
+- 精英/头目/领袖敌人：280 以上
+
+绝大多数敌人的失衡持续时间都为 6 秒或 9 秒。少部分较为强大的敌人会有较长的失衡持续时间作为补偿：
+
+- 三位一体、白垩界卫：11 秒
+- 白垩界卫核心：24 秒
+
+---
+
+### 处决
+
+**主控干员**对处于失衡状态的敌人进行**第一次普攻**时会处决敌人，造成伤害并恢复一定量技力值。
+
+**处决伤害 = 常规伤害乘区 * 处决承伤系数**
+
+处决承伤系数是一个由被处决的敌人决定的参数：
+
+| 敌人等阶 | 处决承伤系数 | 处决技力恢复 |
+| -------- | ------------ | ------------ |
+| 普通敌人 | 1 | 25 |
+| 进阶敌人 | 1.25 | 35 |
+| 精英/头目敌人 | 1.5 | 50 |
+| 领袖敌人 | 1.75 | 100 |
+
+注意：莱万汀和伊冯在终结技状态下不能处决敌人。
+
+---
+
+### 失衡节点
+
+部分强大的敌人（精英/头目/领袖）存在失衡节点。失衡值累积到失衡节点时，会打断敌人行动并让其短暂踉跄（默认 2.5 秒）。
+
+具有失衡节点的敌人：
+
+- **一个失衡节点（50%）**：斧甲兽、破潮之像、罗丹、三位一体、肖像天使、碾骨行刑人、碾骨破城者、跂步晶城、精锐行刑人、潮行天使(δ)、岗哨天使、雾火斧甲兽、碾骨射手
+- **两个失衡节点（33%/66%）**：白垩界卫
+
+---
+
+### 失衡值累积惩罚
+
+如果敌人在很短时间内就进入失衡状态，那么失衡状态结束后的一段时间内，对该敌人累积的失衡值会降低 50%。
+
+| 敌人等阶 | 判定时间 | 惩罚持续时间 |
+| -------- | -------- | ------------ |
+| 普通敌人 | 3 秒内 | 1 秒 |
+| 进阶敌人 | 6 秒内 | 3 秒 |
+| 精英/头目敌人 | 10 秒内 | 5 秒 |
+| 领袖敌人 | 15 秒内 | 10 秒 |
+
+---
+
+## 其他数值机制
+
+---
+
+### 干员基础属性
+
+干员的基础属性包括力量、敏捷、智识和意志这四维属性和生命值、攻击力这两个基本属性。
+
+四维属性包含干员的一个主能力和一个副能力，各属性提供的加成如下：
+
+- **能力值加成 = 主能力 * 0.005 + 副能力 * 0.002**
+- **力量提供的生命值加成 = 5 * 力量**
+- **敏捷提供的物理抗性点数 = 100 - 100 / (0.001 * 敏捷 + 1)**
+- **智识提供的法术抗性点数 = 100 - 100 / (0.001 * 智识 + 1)**
+- **意志提供的受治疗效率加成 = 0.001 * 意志**
+
+注意：干员的四维属性虽然本身带有小数点，但在上述公式计算中均使用其整数部分。
+
+干员四维属性的成长采用多种线型，使用最多的线型 90 级数值为 1 级的 99/14 倍。
+
+**生命值 = 500 + ROUND(5500/98 * (等级 - 1), 0)**
+
+根据干员使用近战/远程武器，会影响其普通攻击范围：
+
+- 近战干员普攻范围：3
+- 远程干员普攻范围：10
+- 弧光和莱万汀：5
+
+---
+
+### 武器属性成长
+
+公测版本中，6 星武器的线型最高为 1.03 倍，保证了 6 星武器之间不会因为基础攻击力差距而被拉开过大的差距。
+
+目前游戏中共有 21 种不同的武器线型。
+
+---
+
+### 敌人属性成长
+
+所有敌人的生命值和攻击力的属性成长采用了几乎相同的线型：
+
+- 90 级敌人的生命值上限约为 1 级敌人的 663.5 倍
+- 90 级敌人的攻击力约为 1 级敌人的 63 倍
+
+敌人的防御力固定为 100，不随等级提升。
+
+---
+
+### 技力
+
+技力是干员用来释放战技所需要消耗的能量，为全队共用资源。
+
+- 技力累积上限：300 点（对应 UI 显示中的 3 格技力）
+- 干员释放战技需要消耗 1 格技力（100 点）
+
+#### 技力获取途径
+
+1. **接战状态自动恢复**：8 点/秒
+2. **主控干员重击命中**：恢复一定技力（数值因干员而异）
+3. **极限闪避**：恢复约 7.5 点技力，暂停技力恢复约 0.5 秒
+4. **处决攻击**：恢复一定技力（参见失衡系统-处决）
+5. **干员技能**：部分技能可恢复技力
+
+队伍在脱战后会快速恢复或降低技力至 2 格：
+
+- 技力恢复速度：75 点/秒
+- 技力降低速度：40 点/秒
+- 完全脱战需要时间：3 秒
+
+**返还技力**：消耗技力后，满足一定条件时重新获得的一部分技力。返还技力不算作"恢复技力"，不会触发恢复技力时触发的效果，且这部分技力消耗时不会获得终结技能量。
+
+---
+
+### 终结技能量
+
+终结技能量是干员发动终结技所需要消耗的能量，每个干员的终结技能量相互独立。
+
+#### 终结技能量获取途径
+
+1. **接战状态释放战技消耗技力**：全队获得等量的终结技能量（比例为 6.5 点/100 技力）
+2. **释放连携技**：释放者自身获得终结技能量（默认为 10 点）
+
+**终结技能量恢复 = 基础恢复 * 终结技充能效率**
+
+可用道具如炖肉会议和小蜜虫布丁可以在使用后恢复干员一定比例的终结技能量，该终结技能量恢复不会受到终结技充能效率的影响。
